@@ -203,6 +203,7 @@ wxGTK:
 - Fixed problems with CJK input method.
 - Implemented ScrollLines/Pages() for all windows (Paul Cornett).
 - Support underlined fonts in wxTextCtrl.
+- Support all border styles; wxListBox honours the borders now
 
 wxMac:
 
